syntax = "proto3";
package main.proto.generated;

message CreateRequest {
  int32 width = 1;
  int32 height = 2;
  int32 min_distance = 3;
}

message CreateResponse {
  int32 code = 1;
  string status = 2;
  int32 cinema_id = 3;
}

message GetAvailableSeatsRequest {
  int32 cinema_id = 1;
  int32 quantity = 2;
}

message GetAvailableSeatsResponse {
  int32 code = 1;
  string status = 2;
  repeated Seat available_seats = 3;
}

message Seat {
  int32 row_no = 1;
  int32 column_no = 2;
}

message ReserveRequest {
  int32 cinema_id = 1;
  repeated Seat seats = 2;
}

message ReserveResponse {
  int32 code = 1;
  string status = 2;
  repeated Seat invalid_seats = 3;
}

service CinemaService {
  rpc create(CreateRequest) returns (CreateResponse);
  rpc getAvailableSeats(GetAvailableSeatsRequest) returns (GetAvailableSeatsResponse);
  rpc reserve(ReserveRequest) returns (ReserveResponse);
}